--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "postbuild": "react-snap",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
+  },
+  "reactSnap" : {
+    "source" : "./build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.4.5",
+    "@svgr/webpack": "^6.3.1",
+    "craco-swc": "^0.5.1",
+    "react-snap-typed": "^1.26.20"
   }
 }
