--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
-  "reactSnap" : {
-    "source" : "./build"
+  "reactSnap": {
+    "source": "./build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +47,15 @@
   "devDependencies": {
     "@craco/craco": "^6.4.5",
     "@svgr/webpack": "^6.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "craco-swc": "^0.5.1",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
     "react-snap-typed": "^1.26.20"
   }
 }
