--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@svgr/webpack": "^6.3.1",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "craco-alias": "^3.0.1",
     "craco-swc": "^0.5.1",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
